<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:name="preferenceScreen">
    <PreferenceCategory
        android:name="general"
        android:summary="@string/settings_general_summary"
        android:title="@string/settings_general">
        <CheckBoxPreference
            android:defaultValue="false"
            android:name="menuOpenOnStart"
            android:summary="@string/settings_showmenu_summary"
            android:title="@string/settings_showmenu" />
        <ListPreference
            android:defaultValue="16"
            android:entries="@array/fontentries"
            android:entryValues="@array/fontvalues"
            android:name="fontSize"
            android:summary="@string/settings_fontsize_summary"
            android:title="@string/settings_fontsize" />
    </PreferenceCategory>

    <PreferenceCategory
        android:name="other"
        android:summary="@string/settings_other_summary"
        android:title="@string/settings_other">
        <Preference
            android:name="about"
            android:summary="@string/settings_aboutus_summary"
            android:title="@string/settings_aboutus" />
        <Preference
            android:name="licenses"
            android:summary="@string/settings_licenses_summary"
            android:title="@string/settings_licenses" />
        <Preference
            android:name="rate"
            android:summary="@string/settings_rate_summary"
            android:title="@string/settings_rate" />

    </PreferenceCategory>

    <PreferenceCategory
        android:name="billing"
        android:summary="@string/settings_billing_summary"
        android:title="@string/settings_billing">
        <Preference
            android:name="purchase"
            android:summary="@string/settings_purchase_summary"
            android:title="@string/settings_purchase" />
    </PreferenceCategory>

</PreferenceScreen>
