<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/support"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Subject"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <EditText
            android:id="@+id/subject_support_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/subject"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />

        <TextView
            android:id="@+id/textView24"
            style="@style/TextTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/message"
            app:layout_constraintStart_toStartOf="@+id/subject_support_text"
            app:layout_constraintTop_toBottomOf="@+id/subject_support_text" />

        <EditText
            android:id="@+id/desc_support_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:gravity="start"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_constraintBottom_toTopOf="@+id/support_add_button"
            app:layout_constraintEnd_toEndOf="@+id/subject_support_text"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/textView24"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/support_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_style_box"
            android:minHeight="35dp"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/desc_support_text" />

        <Button
            android:id="@+id/support_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:minHeight="35dp"
            android:background="@drawable/button_style_box"
            android:backgroundTint="#ffffff"
            android:textColor="?attr/colorPrimaryDark"
            android:textStyle="bold"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/support_add_button"
            app:layout_constraintStart_toEndOf="@+id/support_add_button"
            app:layout_constraintTop_toTopOf="@+id/support_add_button" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>