<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportFragment">
    <LinearLayout
        android:id="@+id/linear_view_support"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context=".AwardsFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="19sp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/ticket"
                />
            <ImageView
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:background="#61000000"
                tools:ignore="Suspicious0dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="19sp"
                android:text="@string/subject"
                android:gravity="center"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:background="#61000000"
                tools:ignore="Suspicious0dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="19sp"
                android:gravity="center"
                android:textStyle="bold"
                />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#61000000"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/support_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </android.support.v7.widget.RecyclerView>


    </LinearLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progress_support"
        android:visibility="visible"
        />

</FrameLayout>